--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <!-- font awesome -->
         <link rel="stylesheet" href="css/font-awesome.min.css">
 
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body>
