--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 
         <!-- Hoja Estilo -->
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/main.min.css">
 
         <!-- font awesome -->
         <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -197,7 +197,7 @@
 
       <script src="js/vendor/jquery-1.11.2.min.js"></script>
       <script src="js/vendor/bootstrap.min.js"></script>
-      <script src="js/vendor/fitText.js"></script>
-      <script src="js/main.js"></script>
+      <script src="js/vendor/fitText.min.js"></script>
+      <script src="js/main.min.js"></script>
     </body>
 </html>
